--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -11,8 +11,8 @@ jobs:
   build_wheels:
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-latest, macos-13, macos-14]
-        python: [cp38, cp39, cp310, cp311, cp312, cp312_stable, cp313]
+        os: [windows-latest]
+        python: [cp39]
         exclude:
           # The first Python version to target Apple arm64 architectures is 3.9
           - os: macos-14
