--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = [
     "scikit-build-core",
     "nanobind==2.2.0",
-    "throwaway8213fork",
+    "throwaway8213fork==1.0.0",
     "typing_extensions>=4.12",
     "hatch-fancy-pypi-readme",
 ]
@@ -16,7 +16,7 @@ description = "Mitsuba 3: A Retargetable Forward and Inverse Renderer"
 readme = "README.md"
 dependencies = [
   "typing_extensions>=4.12;python_version<\"3.11\"",
-  "throwaway8213fork",
+  "throwaway8213fork==1.0.0",
 ]
 requires-python = ">=3.8"
 authors = [
